# bill_parser

./: .gitignore  .python-version  PROCESSED_BAD_20230818141153_CLAROGTFIJA_GFTX230802_ver02.txt  PROCESSED_GOOD_20230818141153_CLAROGTFIJA_GFTX230802_ver02.txt  PROCESSED_PROCESSED_20230502123330_CLAROGTFIJA_GFTX230311_ver01.txt  README.md  constants.py  helpers.py  huehue.py  ioutils.py  line_parsers.py  main.py  models.py  parser.py  requirements.txt  test.py  test.txt
ClaroGT/: ClaroGT_TelefoniaFija_Groovy_20230502.groovy  ClaroGT_TelefoniaMovil_Groovy_20230502.groovy
ClaroGT/ClaroGT_TelefoniaFija/TelefoniaFija/: 20230502123330_CLAROGTFIJA_GFTX230311_ver01.txt.err  20230502124243_CLAROGTFIJA_GFTX230311_ver02.txt.err  20230502124408_CLAROGTFIJA_GFTX230311_ver03.txt  20230502124408_CLAROGTFIJA_GFTX230311_ver04.txt  20230502124408_CLAROGTFIJM_GFTX230311_ver03.ubf.xml  GFTX230311_ver01.txt  GFTX230311_ver02.txt  GFTX230311_ver03.txt  GFTX230311_ver04.txt
clarogt_validacion/: 20230425014443_CLAROGT_FE_CM_GUATEMALA_C22_ABRIL_extracto.txt.err  20230825151413_CLAROGTFIJA_GFTX230717.txt  20230825151413_CLAROGTFIJA_GFTX230717.txt.err  clarogt_validacion.py  clarogtfije_validacion.py  constants.py  helpers.py  hue.py  huehue.py  ioutils.py  line_parsers_fixed.py  line_parsers_mobile.py  lista_errores_fija.md  lista_errores_fija.txt  lista_errores_movil.md  lista_errores_movil.txt  main.py  models.py  parser.py  pyproject.toml
clarogt_validacion/tests/: test_line_parser_fixed.py
fija/: checkEncode.py  constants.py  helpers.py  line_parsers.py  main.py  models.py
(+6 files in other folders)
